--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,13 @@
 name = "oai-usage"
 version = "0.1.0"
 edition = "2024"
+license = "MIT OR Apache-2.0"
+description = "CLI tool for monitoring OpenAI API usage"
 
 [dependencies]
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-comfy-table = "7.0"
+comfy-table = "7.1"
 anyhow = "1.0"
